refactor: Use rollup for package bundle #1
close #1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "ESNext",
     "moduleResolution": "node",
-    "target": "ES2017",
+    "target": "ES2015",
     "lib": [
-      "es2017"
+      "ES2019"
     ],
     "declaration": true,
     "outDir": "dist",
