--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.1",
   "author": "typoerr",
   "license": "MIT",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.module.js",
+  "unpkg": "dist/index.umd.js",
+  "types": "dist/index.d.ts",
   "files": [
     "src",
     "dist",
@@ -23,24 +24,24 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-typescript": "^4.1.1",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
-    "@typoerr/eslint-config": "^0.0.27",
+    "@typoerr/eslint-config": "^0.0.29",
     "eslint": "^6.8.0",
     "jest": "^25.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
-    "ts-jest": "^25.3.1",
+    "rollup": "^2.6.1",
+    "ts-jest": "^25.4.0",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "compile": "run-p compile:*",
-    "compile:esm": "tsc --outDir dist/esm --module esnext",
-    "compile:cjs": "tsc --outDir dist/cjs --module commonjs",
-    "clean": "run-p clean:**",
-    "clean:dist": "rimraf dist",
+    "compile": "rollup -c",
+    "clean": "rimraf dist",
     "lint": "eslint src/**/*.ts",
     "type-check": "tsc --noEmit",
     "npm-publish": "yarn publish",
