--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rollup": "^2.6.1",
     "ts-jest": "^25.4.0",
     "ts-node": "^8.8.2",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
   },
   "scripts": {
