chore: update npm scripts

--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
   "scripts": {
     "compile": "rollup -c",
     "clean": "rimraf dist",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/**/*.ts test/**/*.ts",
     "type-check": "tsc --noEmit",
     "npm-publish": "yarn publish",
-    "release": "run-s lint test compile npm-publish clean",
+    "git:push": "git push -u origin master",
+    "git:push:tag": "git push --tag",
+    "release": "run-s lint test compile npm-publish clean, git:**",
     "test": "jest"
   },
   "publishConfig": {
