--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-typescript": "^4.1.1",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
@@ -35,6 +34,7 @@
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
     "rollup": "^2.6.1",
+    "rollup-plugin-auto-external": "^2.0.0",
     "ts-jest": "^25.4.0",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
