--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
   "scripts": {
     "compile": "rollup -c",
     "clean": "rimraf dist",
-    "lint": "eslint src/**/*.ts test/**/*.ts",
-    "type-check": "tsc --noEmit",
+    "lint": "run-p -l -n lint:*",
+    "lint:eslint": "yarn run eslint src/**/*.ts test/**/*.ts",
+    "lint:prettier": "yarn run prettier --check .",
+    "type-check": "tsc ./tsconfig.json --noEmit",
     "npm-publish": "yarn publish",
     "git:push": "git push",
     "git:push:tag": "git push --tag",
-    "release": "run-s lint test compile npm-publish clean git:**",
+    "release": "run-s lint:* test compile npm-publish clean git:**",
     "test": "ava --config ./ava.config.js"
   },
   "publishConfig": {
